@@ -1,3 +1,10 @@
+2006-12-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/connection_base.hxx, src/connection_base.cxx:
+  - Added capability cap_table_column
+  - Warning about deactivated connections and supports()
+  - Re-use server_version() and protocol_version()
+ test/test085.cxx, test/test092.cxx, test/test093.cxx:
+  - Skip test if essential backend features missing
 2006-12-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/except.hxx, src/result.cxx:
   - New exception class: undefined_column
